--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,3 @@
-
-
 html {
     font-size: 62.5%;
 }
@@ -42,11 +40,43 @@ body{
 }
 
 
-.menu-general{
+.menu{
     grid-area: menu;
     position: sticky;
-    top: 2px;
+    background-color: black;
 }
+
+.menu-display{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    font-size: 2rem;
+    justify-content: space-around;
+}
+
+.menu-contenedor{
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.menu-items{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    a{
+        color: white;
+        padding: 1rem 2rem;
+        border:solid white;
+        border-radius: 2rem;
+    }
+}
+.dropdown-menu{
+    background-color: black;
+}
+
 .sectiong{
     grid-area: section;
     display: flex;   
@@ -234,18 +264,9 @@ header h3 {
 
 /* ESTILOS DE EVENTOS */
 .contenedore{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr .5fr 2fr .5fr 2fr .6fr;
-    grid-template-areas: 
-    "headerev"
-    "menuev "
-    "section1"
-    "music"
-    "section2"
-    "footer"
-    
-    
+   display: flex;
+   flex-flow: column;
+   justify-content: space-around;
 }
 .headerev{
     grid-area: headerev;
@@ -255,29 +276,7 @@ header h3 {
     justify-content: center;
     margin-bottom: 3rem;
 }
-.menueventos{
-    position: sticky;
-    top: 2px;
-}
-.ulmenueventos{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    list-style: none;
-    background-color: black;
-    grid-area: menuev;
-}
-.ulmenueventos a{
-    text-decoration: none;
-    color: white;
-}
-.ulmenueventos li{
-    font-size: 2.5rem;
-    margin: 8px;
-    border: 1px solid white;
-    border-radius: 12px;
-    padding: 0.7rem;
-}
+
 .sectionev1{
     grid-area: section1;
     display: flex;
@@ -674,10 +673,10 @@ header h3 {
     .contenedorp{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr .7fr 4fr 0.5fr;
+        grid-template-rows: 1fr .5fr 4fr 0.5fr;
         grid-template-areas:
         "header header"
-        "menu menu "
+        "menu menu"
         "section section"
         "footer footer" 
         ;
@@ -751,6 +750,7 @@ header h3 {
             margin-bottom: 2rem;
         }
     }
+
 
 
 
