--- a/scss/main.scss
+++ b/scss/main.scss
@@ -263,76 +263,109 @@ header h3 {
 }
 
 /* ESTILOS DE EVENTOS */
-.contenedore{
-   display: flex;
-   flex-flow: column;
-   justify-content: space-around;
-}
-.headerev{
+.contenedore {
+    display: grid;
+      grid-template-columns: 1fr  ;
+      grid-template-rows: .3fr 0.3fr 0.6fr 1.5fr 0.3fr 1.5fr 0.2fr ;
+      grid-template-areas: 
+      "headerev"
+      "menu"
+      "carru"
+      "section1"
+      "music"
+      "section2"
+      "footer"
+      ; }
+  
+  .headerev {
     grid-area: headerev;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 3rem;
-}
+    margin-bottom: 3rem; }
+  
+  .menueventos {
+    position: sticky;
+    top: 2px; }
+  
+    .carousel{
+      grid-area: carru;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
 
-.sectionev1{
+      img{
+        width: 55rem;
+        height: 25rem;
+        margin-top: 7rem;
+        margin-bottom: 7rem;
+        margin-left: 40rem;
+      
+      }
+    }
+  
+  
+  
+  .sectionev1 {
     grid-area: section1;
     display: flex;
     flex-flow: row;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: center; 
+    
+    img {
+      width: 40rem;
+      border-radius: 3rem;
+      transition: 1s ease-out; }
+
+    p {
+        font-size: 2rem;
+        width: 50%; }
 }
-.sectionev1 img{
-    width: 40rem;
-    border-radius: 3rem;
-    transition: 1s ease-out;
-}
-.sectionev1 img:hover{
+  
+  
+  .sectionev1 img:hover {
     transition: 1s;
     width: 44rem;
     height: 55rem;
-    opacity: 50%;
-}
-.sectionev1 p{
-    font-size: 2rem;
-    width: 50%;
-}
-.music{
+    opacity: 50%; }
+  
+  
+  
+  .music {
     grid-area: music;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-}
-.music h3{
+    align-items: center; }
+  
+  .music h3 {
     font-size: 2rem;
-    margin-bottom: 1rem;
-}
-.sectionev2{
+    margin-bottom: 1rem; }
+  
+  .sectionev2 {
     grid-area: section2;
     display: flex;
     flex-flow: row;
     justify-content: space-evenly;
-    align-items: center;
-}
-.sectionev2 img{
+    align-items: center; }
+  
+  .sectionev2 img {
     width: 40rem;
     height: 40rem;
     border-radius: 3rem;
-    transition: 1s ease-out;
-}
-.sectionev2 img:hover{
+    transition: 1s ease-out; }
+  
+  .sectionev2 img:hover {
     transition: 1s;
     width: 44rem;
     height: 44rem;
-    opacity: 50%;
-}
-.sectionev2 p{
+    opacity: 50%; }
+  
+  .sectionev2 p {
     font-size: 2rem;
-    width: 50%;
-}
+    width: 50%; }
 
 /* ESTILOS DE HISTORIA*/
 
@@ -361,26 +394,9 @@ header h3 {
     position: sticky;
     top: 2px;
     grid-area: menuhist;
-}
-.ulmenuhistoria{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    list-style: none;
     background-color: black;
-    
 }
-.ulmenuhistoria a{
-    text-decoration: none;
-    color: white;
-}
-.ulmenuhistoria li{
-    font-size: 2.5rem;
-    margin: 8px;
-    border: 1px solid white;
-    border-radius: 12px;
-    padding: 0.7rem;
-}
+
 .secthist{
     grid-area: secthist;
     display: flex;
@@ -407,8 +423,6 @@ header h3 {
     "sectcont1"
     "sectcont2"
     "footer"
-
-
     ;
 }
 
@@ -424,25 +438,7 @@ header h3 {
     position: sticky;
     top: 2px;
     grid-area: menuco;
-}
-.ulmenuco{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    list-style: none;
     background-color: black;
-    
-}
-.ulmenuco a{
-    text-decoration: none;
-    color: white;
-}
-.ulmenuco li{
-    font-size: 2.5rem;
-    margin: 8px;
-    border: 1px solid white;
-    border-radius: 12px;
-    padding: 0.7rem;
 }
 .sectcont1{
     grid-area: sectcont1;
