--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,3 @@
-html {
-  font-size: 62.5%; }
-
-* {
-  margin: 0;
-  padding: 0; }
-
 /* ESTILOS DEL INDEX */
 body {
   background-color: #3E0609;
@@ -18,7 +11,7 @@ body {
 .contenedor {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr .5fr 2.5fr 0.5fr;
+  grid-template-rows: 1fr .4fr 2.5fr 0.5fr;
   grid-template-areas: "header header" "menu menu" "section section" "footer footer"; }
 
 .headerg {
@@ -28,10 +21,21 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 3rem; }
+  .headerg h1 {
+    margin-top: 1rem;
+    font-size: 5rem; }
+  .headerg .imglogo {
+    width: 15rem;
+    height: 15rem;
+    margin-bottom: 1rem;
+    margin-top: 2rem; }
+  .headerg h3 {
+    font-style: italic; }
 
 .menu {
   grid-area: menu;
   position: sticky;
+  top: 2px;
   background-color: black; }
 
 .menu-display {
@@ -67,63 +71,14 @@ body {
   flex-flow: column;
   justify-content: space-evenly;
   margin: 0rem 3rem; }
-
-.footerg {
-  grid-area: footer;
-  background-color: black;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center; }
-
-header h1 {
-  margin-top: 1rem;
-  font-size: 5rem; }
-
-header .imglogo {
-  width: 15rem;
-  height: 15rem;
-  margin-bottom: 1rem;
-  margin-top: 2rem; }
-
-header h3 {
-  font-style: italic; }
-
-.ul-menu-general {
-  list-style: none;
-  background-color: black;
-  display: flex;
-  flex-flow: wrap row;
-  justify-content: space-evenly;
-  align-items: center; }
-
-.ul-menu-general li {
-  font-size: 2.5rem;
-  border: 1px solid white;
-  border-radius: 12px;
-  padding: .7rem;
-  margin: 8px; }
-
-.ul-menu-general a {
-  text-decoration: none;
-  color: white; }
+  .sectiong h3 {
+    font-size: 3rem;
+    margin-left: 10rem; }
 
 .formind {
   display: flex;
   flex-direction: row;
   justify-content: center; }
-
-.inputmenuin {
-  text-align: center;
-  border: 5px solid black;
-  border-radius: 10px;
-  font-size: 20px;
-  padding: 6px 100px;
-  margin-top: 3px; }
-
-.sectiong h3 {
-  font-size: 3rem;
-  margin-left: 10rem; }
 
 .ulindex {
   display: flex;
@@ -145,72 +100,43 @@ header h3 {
   height: 18rem;
   opacity: 50%; }
 
-.footerg h5 {
-  margin-top: 2rem;
-  font-size: 1.5rem; }
-
-.footerg h3 {
-  font-size: 3rem; }
-
-.footerg input {
-  text-align: center;
-  margin-bottom: 2rem; }
+.footerg {
+  grid-area: footer;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center; }
+  .footerg h5 {
+    margin-top: 2rem;
+    font-size: 1.5rem; }
+  .footerg h3 {
+    font-size: 3rem; }
+  .footerg input {
+    text-align: center;
+    margin-bottom: 2rem; }
 
 /* ESTILOS DE PRODUCTOS*/
 .contenedorp {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr .7fr 4fr 0.5fr;
+  grid-template-rows: 1fr .4fr 4fr 0.5fr;
   grid-template-areas: "header header" "menu menu " "section section" "footer footer"; }
-
-.menudecortes {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  background-color: black;
-  border-radius: 0.8rem;
-  margin-left: 50rem;
-  margin-right: 50rem;
-  margin-top: 3px; }
-
-.menudecortes li {
-  list-style: none;
-  margin-left: 2rem;
-  margin-right: 2rem; }
-
-.menudecortes a {
-  text-decoration: none;
-  color: white;
-  font-size: 2rem; }
-
-.formprod {
-  display: flex;
-  flex-direction: row;
-  justify-content: center; }
-
-.inputmenuprod {
-  text-align: center;
-  border: 2px solid black;
-  border-radius: 10px;
-  font-size: 15px;
-  padding: 3px 35px;
-  margin-top: 3px; }
 
 .sectionp {
   grid-area: section;
   display: flex;
   flex-direction: column;
   justify-content: space-around; }
+  .sectionp h3 {
+    font-size: 2rem;
+    margin-left: 10rem; }
 
 .ulproduct {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   list-style: none; }
-
-.sectionp h3 {
-  font-size: 2rem;
-  margin-left: 10rem; }
 
 .imgprod {
   width: 15rem;
@@ -240,6 +166,14 @@ header h3 {
   align-items: center;
   justify-content: center;
   margin-bottom: 3rem; }
+  .headerev img {
+    width: 15rem;
+    height: 15rem;
+    margin-bottom: 1rem;
+    margin-top: 2rem; }
+  .headerev h1 {
+    margin-top: 1rem;
+    font-size: 5rem; }
 
 .menueventos {
   position: sticky;
@@ -283,10 +217,9 @@ header h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center; }
-
-.music h3 {
-  font-size: 2rem;
-  margin-bottom: 1rem; }
+  .music h3 {
+    font-size: 2rem;
+    margin-bottom: 1rem; }
 
 .sectionev2 {
   grid-area: section2;
@@ -294,6 +227,9 @@ header h3 {
   flex-flow: row;
   justify-content: space-evenly;
   align-items: center; }
+  .sectionev2 p {
+    font-size: 2rem;
+    width: 50%; }
 
 .sectionev2 img {
   width: 40rem;
@@ -307,15 +243,11 @@ header h3 {
   height: 44rem;
   opacity: 50%; }
 
-.sectionev2 p {
-  font-size: 2rem;
-  width: 50%; }
-
 /* ESTILOS DE HISTORIA*/
 .contenedorh {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr .5fr 1.5fr .6fr;
+  grid-template-rows: 1.5fr .6fr 2fr .6fr;
   grid-template-areas: "headerhist" "menuhist" "secthist" "footer"; }
 
 .headerh {
@@ -325,6 +257,14 @@ header h3 {
   align-items: center;
   justify-content: center;
   margin-bottom: 3rem; }
+  .headerh img {
+    width: 15rem;
+    height: 15rem;
+    margin-bottom: 1rem;
+    margin-top: 2rem; }
+  .headerh h1 {
+    margin-top: 1rem;
+    font-size: 5rem; }
 
 .menuhistoria {
   position: sticky;
@@ -338,19 +278,17 @@ header h3 {
   flex-flow: wrap column;
   align-items: center;
   justify-content: center; }
-
-.secthist p {
-  font-size: 2rem; }
-
-.secthist h2 {
-  font-size: 2rem;
-  margin-bottom: 3rem; }
+  .secthist p {
+    font-size: 2rem; }
+  .secthist h2 {
+    font-size: 2rem;
+    margin-bottom: 3rem; }
 
 /* ESTILOS DE CONTACTO */
 .contenedorcont {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr .5fr 1.5fr 1.5fr .6fr;
+  grid-template-rows: 1fr .4fr 1.5fr 1.5fr .6fr;
   grid-template-areas: "headerco" "menuco" "sectcont1" "sectcont2" "footer"; }
 
 .headerco {
@@ -360,6 +298,14 @@ header h3 {
   align-items: center;
   justify-content: center;
   margin-bottom: 3rem; }
+  .headerco img {
+    width: 15rem;
+    height: 15rem;
+    margin-bottom: 1rem;
+    margin-top: 2rem; }
+  .headerco h1 {
+    margin-top: 1rem;
+    font-size: 5rem; }
 
 .menuco {
   position: sticky;
@@ -464,6 +410,13 @@ header h3 {
   animation-duration: 2s;
   animation-delay: 2s;
   animation-iteration-count: infinite; }
+
+html {
+  font-size: 62.5%; }
+
+* {
+  margin: 0;
+  padding: 0; }
 
 /* RESSPONSIVE INDEX PARA TABLET */
 @media screen and (max-width: 768px) {
