--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,10 @@ body {
   position: sticky;
   top: 2px;
   background-color: black; }
+  .menu .btn {
+    color: white;
+    border: solid white 2px;
+    border-radius: 5px; }
 
 .menu-display {
   display: flex;
@@ -114,7 +118,14 @@ body {
     font-size: 3rem; }
   .footerg input {
     text-align: center;
-    margin-bottom: 2rem; }
+    margin-bottom: 2rem;
+    border: 3px solid white; }
+  .footerg .btnfooter {
+    background-color: black;
+    color: white;
+    padding-left: 4px;
+    padding-right: 4px;
+    border: 2px solid white; }
 
 /* ESTILOS DE PRODUCTOS*/
 .contenedorp {
@@ -151,6 +162,28 @@ body {
   width: 18rem;
   height: 18rem;
   opacity: 50%; }
+
+.padingpollo {
+  color: black; }
+
+.padingpicada {
+  color: black; }
+
+/* Maps */
+.padingvaca {
+  background-color: black; }
+
+.padingpollo {
+  background-color: white; }
+
+.padingbebida {
+  background-color: black; }
+
+.padingpicada {
+  background-color: white; }
+
+.padingsize {
+  background-color: 50px; }
 
 /* ESTILOS DE EVENTOS */
 .contenedore {
@@ -271,6 +304,10 @@ body {
   top: 2px;
   grid-area: menuhist;
   background-color: black; }
+  .menuhistoria .btn {
+    color: white;
+    border: solid white 2px;
+    border-radius: 5px; }
 
 .secthist {
   grid-area: secthist;
@@ -288,8 +325,8 @@ body {
 .contenedorcont {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr .4fr 1.5fr 1.5fr .6fr;
-  grid-template-areas: "headerco" "menuco" "sectcont1" "sectcont2" "footer"; }
+  grid-template-rows: 1fr .4fr 1.5fr 0.5fr 1.5fr .6fr;
+  grid-template-areas: "headerco" "menuco" "sectcont1" "sectcont2" "sectcontinfo" "footer"; }
 
 .headerco {
   grid-area: headerco;
@@ -312,8 +349,13 @@ body {
   top: 2px;
   grid-area: menuco;
   background-color: black; }
+  .menuco .btn {
+    color: white;
+    border: solid white 2px;
+    border-radius: 5px; }
 
 .sectcont1 {
+  margin-top: 3rem;
   grid-area: sectcont1;
   display: flex;
   flex-direction: column;
@@ -321,11 +363,22 @@ body {
   justify-content: center; }
 
 .iframemapa {
+  height: 30rem;
+  width: 75rem;
+  margin-top: 3rem;
   border-radius: 3rem; }
 
 .sectcont1 h3 {
   font-size: 4rem;
   margin-bottom: 3rem; }
+
+.sectcontactoinfo {
+  grid-area: sectcontinfo;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  color: black; }
 
 .sectcont2 {
   margin-top: 8rem;
@@ -333,28 +386,28 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-size: 2rem; }
+  .sectcont2 .redrow {
+    display: flex;
+    flex-direction: row;
+    margin-top: 2rem; }
+  .sectcont2 h2 {
+    font-size: 4rem; }
 
 .sectcont2 h3 {
   margin-bottom: 4rem;
   font-size: 3rem; }
 
-.sectcont2 .insta {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 3rem; }
-
-.sectcont2 .face {
+.instalog, .facelog, .fonolog {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center; }
 
-.sectcont2 .fono {
+.sectioncontacto {
   display: flex;
-  flex-direction: row;
+  flex: column nowrap;
   justify-content: center;
   align-items: center; }
 
