--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,15 +2,17 @@
 .contenedorcont{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr .4fr 1.5fr 1.5fr .6fr;
+    grid-template-rows: 1fr .4fr 1.5fr 0.5fr 1.5fr .6fr;
     grid-template-areas: 
     "headerco"
     "menuco"
     "sectcont1"
     "sectcont2"
+    "sectcontinfo"
     "footer"
     ;
 }
+
 
 .headerco{
     grid-area: headerco;
@@ -35,8 +37,14 @@
     top: 2px;
     grid-area: menuco;
     background-color: black;
+    .btn{
+        color: white;
+        border: solid white 2px;
+        border-radius: 5px;
+       }
 }
 .sectcont1{
+    margin-top: 3rem;
     grid-area: sectcont1;
     display: flex;
     flex-direction: column;
@@ -44,11 +52,22 @@
     justify-content: center;
 }
 .iframemapa{
+    height: 30rem;
+    width: 75rem;
+    margin-top: 3rem;
     border-radius: 3rem;
 }
 .sectcont1 h3{
     font-size: 4rem;
     margin-bottom: 3rem;
+}
+.sectcontactoinfo{
+    grid-area: sectcontinfo;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
 .sectcont2{
     margin-top: 8rem;
@@ -56,31 +75,41 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     font-size: 2rem;
+    .redrow{
+        display: flex;
+        flex-direction: row;
+        margin-top: 2rem;
+    }
+    h2{
+        font-size: 4rem;
+    }
 }
 .sectcont2 h3{
     margin-bottom: 4rem;
     font-size: 3rem;
 }
-.sectcont2 .insta{
+.instalog{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-bottom: 3rem;
+    
 }
-.sectcont2 .face{
+.facelog{
+    @extend .instalog;
+}
+.fonolog{
+    @extend .instalog;
+}
+.sectioncontacto{
     display: flex;
-    flex-direction: row;
+    flex: column nowrap;
     justify-content: center;
     align-items: center;
 }
-.sectcont2 .fono{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
+    
 .insta img{
     width: 1-rem;
     height: 6rem;
