--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -35,10 +35,7 @@ body{
         font-size: 5rem;
         }
         .imglogo{
-            width: 15rem;
-        height:15rem;
-        margin-bottom: 1rem;
-        margin-top: 2rem;
+            @include imglogoprincipal(15rem, 15rem, 1rem, 2rem)
         }
         h3 {
             font-style: italic;
@@ -52,8 +49,12 @@ body{
     position: sticky;
     top: 2px;
     background-color: black;
+   .btn{
+    color: white;
+    border: solid white 2px;
+    border-radius: 5px;
+   }
 }
-
 .menu-display{
     display: flex;
     width: 100%;
@@ -141,7 +142,21 @@ body{
     input{
         text-align: center;
         margin-bottom: 2rem;
+        border: 3px solid white;
+    }
+    .btnfooter{
+        background-color: black;
+        color: white;
+        padding-left: 4px;
+        padding-right: 4px;
+        border: 2px solid white;
     }
 }
 
+@mixin imglogoprincipal($ancho, $alto, $marginb, $margint){
+    width: $ancho;
+    height: $alto;
+    margin-bottom: $marginb;
+    margin-top: $margint;
+}
 
